--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-image: linear-gradient(rgb(236, 104, 148), rgb(231, 124, 187), white);
+  overflow-y: hidden;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.name,
+.Department,
+.Rating {
+  font-size: 25px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn {
+  top: 25px;
+  width: 180px;
+  height: 40px;
+  text-align: center;
+  font-size: 24px;
+  border-radius: 20px;
+  font-weight: 600;
+  background-color: blueviolet;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.text {
+  background-color: rgb(154, 113, 190);
+  width: 200px;
+  height: 40px;
+  text-align: center;
+  font-size: 24px;
+  border-radius: 20px;
+}
+
+#heading {
+  text-shadow: 2px 2px #0d17d2;
+
+}
+
+.last {
+  border: 2px solid black;
+  position: relative;
+  left: 15vw;
+  top: 25vh;
+  width: 65vw;
+  min-height: 3vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  gap: 4px;
+  padding: 10px 0px;
+  background-color: rgb(155, 138, 64);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.last1 {
+  border-radius: 15px;
+  width: 30vw;
+  min-height: 4vh;
+  background-color: pink;
+  background-color: rgb(235, 130, 174);
 }
