--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background-image: linear-gradient(rgb(236, 104, 148), rgb(231, 124, 187), white);
+  background-image: linear-gradient(rgb(243, 144, 177), rgb(197, 186, 193), pink);
   overflow-y: hidden;
 }
 
@@ -13,23 +13,24 @@ body {
 .name,
 .Department,
 .Rating {
-  font-size: 25px;
+  font-size: 30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #4b044b;
 }
 
-.btn {
+.button {
   top: 25px;
   width: 180px;
-  height: 40px;
+  height: 44px;
   text-align: center;
   font-size: 24px;
   border-radius: 20px;
   font-weight: 600;
-  background-color: blueviolet;
+  background-color: rgb(126, 82, 116);
 }
 
 .text {
-  background-color: rgb(154, 113, 190);
+  background-color: rgb(171, 144, 196);
   width: 200px;
   height: 40px;
   text-align: center;
@@ -37,28 +38,29 @@ body {
   border-radius: 20px;
 }
 
-#heading {
+#head {
   text-shadow: 2px 2px #0d17d2;
+  font-size: 42px;
 
 }
 
-.last {
-  border: 2px solid black;
+.end {
+  border: 2px solid rgb(55, 4, 68);
   position: relative;
   left: 15vw;
   top: 25vh;
   width: 65vw;
-  min-height: 3vh;
+  min-height: 6vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   gap: 4px;
   padding: 10px 0px;
-  background-color: rgb(155, 138, 64);
+  background-color: rgb(134, 105, 158);
 }
 
-.last1 {
+.end2 {
   border-radius: 15px;
   width: 30vw;
   min-height: 4vh;
